Fix hero features width to restrict wrapping

--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -57,7 +57,7 @@
     }
 
     &-features {
-      width: 200%;
+      width: max-content;
       display: flex;
       gap: 1.6rem;
     }
